<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" >

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
      android:id="@+id/txtReminder"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dip"
      android:gravity="right"
      android:text="@string/reminderName"
      android:width="70dip" >
    </TextView>

    <EditText
      android:id="@+id/edtReminder"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="5dip"
      android:layout_toRightOf="@id/txtReminder"
      android:hint="@string/reminderNameTip"
      android:width="290dip" >
    </EditText>

    <TextView
      android:id="@+id/txtDetails"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_below="@id/edtReminder"
      android:layout_marginTop="10dip"
      android:gravity="right"
      android:text="@string/reminderDetails"
      android:width="70dip" >
    </TextView>

    <EditText
      android:id="@+id/edtDetails"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/edtReminder"
      android:layout_marginLeft="5dip"
      android:layout_toRightOf="@id/txtDetails"
      android:hint="@string/reminderDetailsTip"
      android:width="290dip" >
    </EditText>

    <TextView
      android:id="@+id/txtTime"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_below="@id/edtDetails"
      android:layout_marginTop="10dip"
      android:gravity="right"
      android:text="@string/reminderHour"
      android:width="70dip" />

      <Spinner
        android:id="@+id/spinnerTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtDetails"
        android:layout_marginLeft="5dip"
        android:layout_toRightOf="@id/txtTime"
        android:minWidth="290dip" >
      </Spinner>

        <!-- MONDAY -->
        <TextView
          android:id="@+id/txtMonday"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@id/spinnerTime"
          android:gravity="right"
          android:text="@string/Mon"
          android:width="75dip" >
        </TextView>

        <CheckBox
          android:id="@+id/cbMonday"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@id/spinnerTime"
          android:layout_marginLeft="5dip"
          android:layout_toRightOf="@id/txtMonday"
          android:gravity="right" />

          <!-- TUESDAY -->
          <TextView
            android:id="@+id/txtTuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cbMonday"
            android:gravity="right"
            android:text="@string/Tue"
            android:width="75dip" >
          </TextView>

          <CheckBox
            android:id="@+id/cbTuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cbMonday"
            android:layout_marginLeft="5dip"
            android:layout_toRightOf="@id/txtTuesday"
            android:gravity="right" />

            <!-- WEDNESDAY -->
            <TextView
              android:id="@+id/txtWednesday"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@id/cbTuesday"
              android:gravity="right"
              android:text="@string/Wed"
              android:width="75dip" >
            </TextView>

            <CheckBox
              android:id="@+id/cbWednesday"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@id/cbTuesday"
              android:layout_marginLeft="5dip"
              android:layout_toRightOf="@id/txtWednesday"
              android:gravity="right" />

              <!-- THURSDAY -->
              <TextView
                android:id="@+id/txtThursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cbWednesday"
                android:gravity="right"
                android:text="@string/Thu"
                android:width="75dip" >
              </TextView>

              <CheckBox
                android:id="@+id/cbThursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cbWednesday"
                android:layout_marginLeft="5dip"
                android:layout_toRightOf="@id/txtThursday"
                android:gravity="right" />

                <!-- FRIDAY -->
                <TextView
                  android:id="@+id/txtFriday"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_below="@id/cbThursday"
                  android:gravity="right"
                  android:text="@string/Fri"
                  android:width="75dip" >
                </TextView>

                <CheckBox
                  android:id="@+id/cbFriday"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_below="@id/cbThursday"
                  android:layout_marginLeft="5dip"
                  android:layout_toRightOf="@id/txtFriday"
                  android:gravity="right" />

                  <!-- SATURDAY -->
                  <TextView
                    android:id="@+id/txtSaturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cbFriday"
                    android:gravity="right"
                    android:text="@string/Sat"
                    android:width="75dip" >
                  </TextView>

                  <CheckBox
                    android:id="@+id/cbSaturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cbFriday"
                    android:layout_marginLeft="5dip"
                    android:layout_toRightOf="@id/txtSaturday"
                    android:gravity="right" />

                    <!-- SUNDAY -->
                    <TextView
                      android:id="@+id/txtSunday"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_below="@id/cbSaturday"
                      android:gravity="right"
                      android:text="@string/Sun"
                      android:width="75dip" >
                    </TextView>

                    <CheckBox
                      android:id="@+id/cbSunday"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_below="@id/cbSaturday"
                      android:layout_marginLeft="5dip"
                      android:layout_toRightOf="@id/txtSunday"
                      android:gravity="right" />
                      <TextView
                        android:id="@+id/txtPriority"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@id/cbSunday"
                        android:layout_marginTop="10dip"
                        android:gravity="right"
                        android:text="@string/reminderPriority"
                        android:width="70dip" >
                      </TextView>

                      <Spinner
                        android:id="@+id/spinnerPriorities"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/cbSunday"
                        android:layout_marginLeft="5dip"
                        android:layout_toRightOf="@id/txtPriority"
                        android:minWidth="290dip" >
                      </Spinner>
                      <TextView
                        android:id="@+id/txtCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@id/spinnerPriorities"
                        android:layout_marginTop="10dip"
                        android:gravity="right"
                        android:text="@string/reminderCategory"
                        android:width="70dip" >
                      </TextView>

                      <Spinner
                        android:id="@+id/spinnerCategories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/spinnerPriorities"
                        android:layout_marginLeft="5dip"
                        android:layout_toRightOf="@id/txtCategory"
                        android:minWidth="290dip" >
                      </Spinner>

                        <LinearLayout
                          android:id="@+id/linearLayout1"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:layout_below="@id/spinnerCategories"
                          android:gravity="center_vertical" >

                          <Button
                            android:id="@+id/btnSave"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            android:onClick="btnSave_click"
                            android:text="@string/saveButton" >
                          </Button>

                          <Button
                            android:id="@+id/btnCancel"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            android:onClick="btnCancel_click"
                            android:text="@string/cancelButton" >
                          </Button>
                        </LinearLayout>
                      </RelativeLayout>
                    </ScrollView>
